<resources>
    <string name="app_name">EVERNEWS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="button_next">NEXT</string>
    <string name="button_back">BACK</string>
    <string name="button_finish">FINISH</string>
    <string name="button_save">SAVE</string>
    <string name="button_delete_newsgroup">Delete newsgroup</string>
    <string name="button_delete_subgroup">Delete subgroup</string>

    <string name="header1_newsgroup">ADD NEWSGROUP</string>
    <string name="header2_newsgroup">Add a newsgroup</string>
    <string name="header1_subscribe">SUBSCRIBE</string>
    <string name="header2_subscribe">Select your subgroups</string>
    <string name="header1_profile">Profile</string>

    <string name="label_identity">Identity</string>
    <string name="hint_name">Your name *</string>
    <string name="hint_email_address">Email address *</string>
    <string name="label_server">Server information</string>
    <string name="hint_server_alias">Server alias</string>
    <string name="label_newsgroup_name">Newsgroup name</string>
    <string name="label_subgroup_name">Subgroup name</string>
    <string name="label_alias">Alias</string>
    <string name="splash_subtutle">Your mobile Newsgroup-Reader</string>
    <string name="splash_title">EVERNEWS</string>
    <string name="splash_image_description">App logo</string>
    <string name="feedback_message">Feedback Nachricht</string>

    <string-array name="dummy_newsgroups">
        <item> tu.graz-lv.first.newsgroup </item>
        <item> tu.graz-lv.second.newsgroup </item>
        <item> tu.graz-lv.third.newsgroup </item>
    </string-array>
    <string name="hint_server">Newsgroup-server *</string>
    <string name="filter">Filter…</string>
    <string name="profile_label_language">Language</string>
    <string name="header_message">Inbox</string>
    <string name="header_create_thread">Create Thread</string>
    <string-array name="languages_list">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="languages_list_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="tv_text">TextView Text</string>
    <string name="feedback_wrong_name_email">Enter valid name and email address.</string>
    <string name="feedback_wrong_name">Enter valid name.</string>
    <string name="feedback_wrong_email">Enter valid email address.</string>
    <string name="feedback_server_connection_error">Connection to the server failed.</string>
    <string name="feedback_settings_saved">Successfully saved!</string>
    <string name="feedback_unsubscribed">"Unsubscribed from "</string>
    <string name="feedback_alias_set">"Alias set for "</string>
    <string name="edit_alias_dialog_title">"Edit Alias for "</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_ng_server_deleted">Newsgroup server successfully deleted.</string>
    <string name="feedback_ng_server_alias_set">Server alias successfully set.</string>
    <string name="feedback_no_message_threads">Newsgroup does not contain any threads yet.</string>
    <string name="language_pref_key" translatable="false">language</string>
    <string name="feedback_missing_message">Please enter a message</string>
    <string name="feedback_missing_subject">Please enter the subject</string>
    <string name="feedback_send_fail">Message post failed</string>
    <string name="feedback_send_succeeded">Message posted</string>
    <string name="input_subject">Subject</string>
    <string name="input_message">Message</string>
</resources>